Add PIT settings and profile from master branch